<resources>
    <string name="app_name">New Food Finder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="which_foods_do_you_like">Which foods do you like?</string>
    <string name="add">Add</string>
    <string name="your_food_preferences">Your Food Preferences:</string>
    <string name="view_list">View List</string>
    <string name="view_map">View Map</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="edit">edit</string>
    <string name="title_activity_maps">Map</string>
</resources>
